--- a/index.html
+++ b/index.html
@@ -10,48 +10,48 @@
     <div class="keys">
         <div data-key="65" class="key">
             <kbd>A</kbd>
-            <span class="sound">clap</span>
+            <span class="sound">mix1</span>
         </div>
         <div data-key="83" class="key">
             <kbd>S</kbd>
-            <span class="sound">hihat</span>
+            <span class="sound">mix2</span>
         </div>
         <div data-key="68" class="key">
             <kbd>D</kbd>
-            <span class="sound">kick</span>
+            <span class="sound">mix3</span>
         </div>
         <div data-key="70" class="key">
             <kbd>F</kbd>
-            <span class="sound">openhat</span>
+            <span class="sound">mix4</span>
         </div>
         <div data-key="71" class="key">
             <kbd>G</kbd>
-            <span class="sound">boom</span>
+            <span class="sound">mix5</span>
         </div>
         <div data-key="72" class="key">
             <kbd>H</kbd>
-            <span class="sound">ride</span>
+            <span class="sound">mix6</span>
         </div>
         <div data-key="74" class="key">
             <kbd>J</kbd>
-            <span class="sound">snare</span>
+            <span class="sound">mix7</span>
         </div>
         <div data-key="75" class="key">
             <kbd>K</kbd>
-            <span class="sound">tom</span>
+            <span class="sound">mix8</span>
         </div>
         <div data-key="76" class="key">
             <kbd>L</kbd>
-            <span class="sound">tink</span>
+            <span class="sound">mix9</span>
         </div>
         </div>
 
-    <audio data-key="65" src="sounds/clap.wav"></audio>
-    <audio data-key="83" src="sounds/hihat.wav"></audio>
-    <audio data-key="68" src="sounds/kick.wav"></audio>
-    <audio data-key="70" src="sounds/openhat.wav"></audio>
-    <audio data-key="71" src="sounds/boom.wav"></audio>
-    <audio data-key="72" src="sounds/ride.wav"></audio>
-    <audio data-key="74" src="sounds/snare.wav"></audio>
-    <audio data-key="75" src="sounds/tom.wav"></audio>
-    <audio data-key="76" src="sounds/tink.wav"></audio>]
+    <audio data-key="65" src="AC_GuitarMix120G-06.wav"></audio>
+    <audio data-key="83" src="AC_GuitarMix120G-05.wav"></audio>
+    <audio data-key="68" src="AC_GuitarMix120G-04.wav"></audio>
+    <audio data-key="70" src="AC_GuitarMix120G-03.wav"></audio>
+    <audio data-key="71" src="AC_GuitarMix120G-02.wav"></audio>
+    <audio data-key="72" src="AC_GuitarMix120G-01.wav"></audio>
+    <audio data-key="74" src="AC_GuitarMix120F-06.wav"></audio>
+    <audio data-key="75" src="AC_GuitarMix120F-05.wav"></audio>
+    <audio data-key="76" src="AC_GuitarMix120F-04.wav"></audio>
